--- a/src/components/menuBar.css
+++ b/src/components/menuBar.css
@@ -4,6 +4,7 @@
     text-align: center;
     right: -60px;
 }
+
 .dropdown-item {
     font-family: Montserrat;
     color: #6C5B7B;
@@ -16,11 +17,13 @@
     color: #6C5B7B;
 }
 
-.dropdown-toggle::after { 
-    content: none; 
-} 
+.dropdown-toggle::after {
+    content: none;
+}
 
-#toggle:focus, #toggle:active, #toggle:focus:active {
+#toggle:focus,
+#toggle:active,
+#toggle:focus:active {
     background-image: none;
     border: none;
     box-shadow: none;
@@ -28,4 +31,45 @@
 
 #toggle {
     border: none;
+}
+
+.menuBar-navBar {
+    height: 10%;
+    margin: 0.5% 1% 0 1%;
+    padding: 1% 1.5%;
+    background: rgba(248, 177, 149, 0.8);
+    border-radius: 20px;
+}
+
+.menuBar-navbar-collapse {
+    width: 45%;
+    height: 100%;
+}
+
+.menuBar-nav {
+    width: 45%;
+    height: 100%;
+}
+.menuBar-nav-sign-in {
+    width: 20%;
+    height: 100%;
+}
+.menuBar-btn-link {
+    font-style: normal;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1vw;
+    line-height: 1px;
+}
+
+.menuBar-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background: #C06C84;
+    border: 3px solid #C06C84;
+    border-radius: 20px;
+    margin-right: 5%;
 }
