--- a/src/components/registration/registration.css
+++ b/src/components/registration/registration.css
@@ -2,7 +2,7 @@
     background-color: '#f7f7f7';
     margin: 0;
     padding: 0;
-    position: "absolute"; 
+    position: "absolute";
     top: 0;
     right: 0;
     bottom: 0;
@@ -16,50 +16,58 @@
     left: 50%;
     transform: translate(-50%, -43%);
     box-sizing: border-box;
-    max-width: 600px;
-    width: 100%;
-    height: 800px;
-    padding: 0px 100px 80px 100px;
-    text-align: center ;
+
+    width: 30%;
+    height: 75%;
+    padding: 1% 4% 4% 4%;
+    text-align: center;
     border-radius: 20px;
     background: rgba(248, 177, 149, 0.8);
 }
 
-.register-title, a, .login-btn, .register-subtitle, input[type=text], input[type=password], .register-btn {
+.register-title,
+a,
+.login-btn,
+.register-subtitle,
+input[type=text],
+input[type=password],
+.register-btn {
     color: #6C5B7B;
     font-weight: bold;
     font-style: normal;
 }
 
 .register-title {
-    font-size: 96px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    font-size: 6vw;
+
+
 }
 
 .register-subtitle {
-    font-size: 36px;
-    margin-bottom: 0px;
+    font-size: 2vw;
+    padding-bottom: 4%;
 }
 
 ::placeholder {
     color: rgba(108, 91, 123, 0.5);
 }
 
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
     width: 100%;
     font-weight: bold;
-    font-size: 24px;
-    border: 3px solid #C06C84;
+    font-size: 1vw;
+    border: 0.15vw solid #C06C84;
     background-color: rgba(255, 255, 255, 0);
     font-style: normal;
-    margin: 18px 0;
-    height: 60px;
-    padding: 25px;
+    margin: 1.5% 0%;
+    height: 1%;
+    padding: 3%;
 }
 
-input[type=text]:focus, input[type=password]:focus {
-    outline: #e4829e solid 3px ;
+input[type=text]:focus,
+input[type=password]:focus {
+    outline: #e4829e solid 3px;
     box-shadow: 0 0 10px #e4829e;
 }
 
@@ -68,17 +76,17 @@ input[type=text]:focus, input[type=password]:focus {
     color: rgb(235, 54, 54);
     font-size: 14px;
     float: left;
-    float:left;
+    float: left;
 }
 
 .register-btn {
-    margin: 25px 0;
+    margin: 1.5% 0%;
     width: 100%;
-    height: 65px;
+    height: 100%;
     border-radius: 10px;
     background: #C06C84;
     border: 3px solid #C06C84;
-    font-size: 24px;
+    font-size: 1.5vw
 }
 
 .register-btn:hover {
@@ -87,5 +95,5 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 a {
-    font-size: 16px;
+    font-size: 1vw;
 }
