--- a/src/components/constructor/constructorTest.css
+++ b/src/components/constructor/constructorTest.css
@@ -1,23 +1,113 @@
-.constructorTest-question {
+.constructorTest-wrapper {
     position: absolute;
-    top: 17%;
-    left: 49%;
-    transform: translate(-50%, -42%);
-    box-sizing: border-box;
-    max-width: 80%;
-    height: 100px;
-
-
-}
-.constructorTest-ansewers {
-    position: absolute;
-    top: 55%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -42%);
     box-sizing: border-box;
     max-width: 80%;
-    height: 60%;
-    border-radius: 20px;
-    border: 10px solid #F8B195;
-    background-color: rgb(248, 178, 150, 0.5);
+    height: 70%;
+    border-radius: 1vw;
+    background: rgba(248, 177, 149, 0.5);
+
+}
+
+.constructorTest-myButton {
+    width: 250px;
+    height: 50px;
+    background-color: #C06C84;
+    border-radius: 10px;
+    border: 1px solid #C06C84;
+    display: inline-block;
+    cursor: pointer;
+    color: #F8B195;
+    font-style: normal;
+    font-weight: bold;
+    font-family: Montserrat;
+    font-size: 18px;
+    line-height: 39px;
+    padding: 9px 31px;
+    text-decoration: none;
+    outline: none;
+}
+
+.constructorTest-btn:hover {
+    outline-color: #F8B195;
+    border: 1px solid #F8B195;
+    background-color: #F8B195;
+}
+
+.constructorTest-col {
+    width: 100%;
+    height: 100%;
+}
+
+
+.constructorTest-font {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.3vw;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    padding: 1%;
+}
+
+.constructorTest-input {
+    width: 50%;
+    font-weight: bold;
+    font-size: 1vw;
+    border: 0.1vw solid #F8B195;
+    border-radius: 1vw;
+    background-color: rgb(248, 178, 150, 0.0);
+    font-style: normal;
+
+    height: 5%;
+    padding: 2%;
+    outline: none;
+}
+
+.constructorTest-input-answer {
+    width: 100%;
+    font-weight: bold;
+    font-size: 1vw;
+    border: 0.1vw solid #F8B195;
+    border-radius: 1vw;
+    background-color: rgb(248, 178, 150, 0.0);
+    font-style: normal;
+
+    height: 15%;
+    padding: 2%;
+    outline: none;
+}
+
+.constructorTest-container {
+
+    width: 100%;
+    height: 65%;
+
+}
+
+
+.constructorTest-btn {
+    box-sizing: border-box;
+    width: 20%;
+    height: 10%;
+    background-color: #C06C84;
+    border-radius: 1vw;
+    border: 1px solid #C06C84;
+    display: inline-block;
+    cursor: pointer;
+    color: #F8B195;
+    font-style: normal;
+    font-weight: bold;
+    font-family: Montserrat;
+    font-size: 1.5vw;
+    line-height: 39px;
+    text-decoration: none;
+    outline: none;
+    margin-right: 1%;
+    margin-top: 1%;
 }
